# opcp-openstack-simulator

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_auth.sh  deployApp.sh  docker-compose.yml  entrypoint.sh  init_default_user.py  pyproject.toml  requirements.txt  run_openstack_auth.sh  temp_fix.py  test_auth_fix.py
.kiro/specs/ironic-baremetal-manager/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/openstack-simulator/: .config.kiro  design.md  requirements.md  tasks.md
conf/: deploy.ini  limits.ini  nginx.conf  nginx.conf.template
deploy/: clouds.yaml  start.sh
deploy/nginx/: openstack-simulator.conf
docs/: ARCHITECTURE_GUIDE.md  DEPLOYMENT_GUIDE.md  INTRODUCTION.md  OpenStack_Simulation_Approaches.md  USER_GUIDE.md
openstack_simulator/: __init__.py  exceptions.py  limiter.py  models.py  simulator.py  store.py
openstack_simulator/api/: __init__.py  app.py  baremetal.py  compute.py  helpers.py  helpers.py.backup  identity.py  image.py  network.py  volume.py  wsgi.py
openstack_simulator/managers/: __init__.py  auth.py  baremetal.py  compute.py  network.py  security_group.py  volume.py
tests/: conftest.py  test_all_managers_checkpoint.py  test_api_smoke.py  test_baremetal_api.py  test_baremetal_properties.py  test_docker_api.py  test_infrastructure_smoke.py  test_managers_checkpoint.py  test_readme_page.py
