[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack_simulator"
version = "0.1.0"
description = "A pure-Python, in-memory OpenStack simulator for training labs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "flask>=3.0",
    "gunicorn>=21.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openstack_simulator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
